{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 40,
  "lineage": "93344f38-d0ea-5d9e-8ec6-4037978f95bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oversecured_test_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:148273267728:instance/i-0935e059943c7b5d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0935e059943c7b5d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e673b01f8a04ebd2",
            "private_dns": "ip-172-16-10-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.195",
            "public_dns": "ec2-35-172-129-230.compute-1.amazonaws.com",
            "public_ip": "35.172.129.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000a67f91d19ff834",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f95a9c0ad389cbbe",
            "tags": {
              "Name": "tf-oversecured-test-vm"
            },
            "tags_all": {
              "Name": "tf-oversecured-test-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caa0c14be6c84a4b"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws-key",
            "aws_security_group.oversecured_security_group",
            "aws_subnet.oversecured_subnet",
            "aws_vpc.oversecured_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "oversecured_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148273267728:internet-gateway/igw-032e5417e29575649",
            "id": "igw-032e5417e29575649",
            "owner_id": "148273267728",
            "tags": {
              "Name": "tf-oversecured-gw"
            },
            "tags_all": {
              "Name": "tf-oversecured-gw"
            },
            "vpc_id": "vpc-083588c83741c4304"
          },
          "dependencies": [
            "aws_vpc.oversecured_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "oversecured_public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148273267728:route-table/rtb-04ca9b88ec15dc9bf",
            "id": "rtb-04ca9b88ec15dc9bf",
            "owner_id": "148273267728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032e5417e29575649",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-oversecured-public-rtb"
            },
            "tags_all": {
              "Name": "tf-oversecured-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-083588c83741c4304"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.oversecured_gw",
            "aws_vpc.oversecured_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "oversecured_crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7b002b38137f088",
            "route_table_id": "rtb-04ca9b88ec15dc9bf",
            "subnet_id": "subnet-0f95a9c0ad389cbbe"
          },
          "dependencies": [
            "aws_internet_gateway.oversecured_gw",
            "aws_route_table.oversecured_public_rtb",
            "aws_subnet.oversecured_subnet",
            "aws_vpc.oversecured_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oversecured_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148273267728:security-group/sg-0caa0c14be6c84a4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0caa0c14be6c84a4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230622133759461400000005",
            "name_prefix": "terraform-",
            "owner_id": "148273267728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-oversecured_security_group"
            },
            "tags_all": {
              "Name": "tf-oversecured_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-083588c83741c4304"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.oversecured_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oversecured_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148273267728:subnet/subnet-0f95a9c0ad389cbbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f95a9c0ad389cbbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148273267728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-oversecured-subnet"
            },
            "tags_all": {
              "Name": "tf-oversecured-subnet"
            },
            "vpc_id": "vpc-083588c83741c4304"
          },
          "dependencies": [
            "aws_vpc.oversecured_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "oversecured_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148273267728:vpc/vpc-083588c83741c4304",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0140127c0a72091e0",
            "default_route_table_id": "rtb-087a5cffde119843b",
            "default_security_group_id": "sg-0cd1ade0a62f04556",
            "dhcp_options_id": "dopt-022f127c5aa8065fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083588c83741c4304",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087a5cffde119843b",
            "owner_id": "148273267728",
            "tags": {
              "Name": "tf-oversecured-vpc"
            },
            "tags_all": {
              "Name": "tf-oversecured-vpc"
            }
          }
        }
      ]
    }
  ]
}